[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/sprites/mecha_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/collisions/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemies/Mecha/Mecha.gd" type="Script" id=3]
[ext_resource path="res://src/collisions/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/electric.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/enemy_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/enemy_death.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Wake"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Attack/node = SubResource( 6 )
states/Attack/position = Vector2( 68, -103 )
states/Damage/node = SubResource( 7 )
states/Damage/position = Vector2( 543, -103 )
states/Death/node = SubResource( 8 )
states/Death/position = Vector2( 772, -103 )
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 68, 88 )
states/Run/node = SubResource( 10 )
states/Run/position = Vector2( 296, -103 )
states/Wake/node = SubResource( 11 )
states/Wake/position = Vector2( 479, 88 )
transitions = [ "Idle", "Wake", SubResource( 12 ), "Wake", "Idle", SubResource( 13 ), "Wake", "Run", SubResource( 14 ), "Idle", "Attack", SubResource( 15 ), "Run", "Attack", SubResource( 16 ), "Run", "Damage", SubResource( 17 ), "Damage", "Run", SubResource( 18 ), "Idle", "Damage", SubResource( 19 ), "Damage", "Idle", SubResource( 20 ), "Damage", "Death", SubResource( 21 ), "Attack", "Idle", SubResource( 22 ), "Run", "Idle", SubResource( 23 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -344, -215 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 10, 15 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 15, 24 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=29]
radius = 80.0

[sub_resource type="Curve" id=31]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0, 347.5 ), 0.0, 0.0, 0, 0, Vector2( 0.233227, -121.591 ), -943.493, -943.493, 0, 0, Vector2( 1, -121.591 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="Curve" id=33]
max_value = 2.5
_data = [ Vector2( 0, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.667614 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=34]
curve = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=30]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 32 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 34 )
color = Color( 0.886275, 0.894118, 0.792157, 1 )

[node name="Mecha" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
vframes = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Damage = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"stompable",
]]
position = Vector2( 41, 45 )
shape = SubResource( 26 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
position = Vector2( 25, 0 )
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 16, 36 )
shape = SubResource( 27 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 25, 0 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 16, 27 )
shape = SubResource( 28 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 41, 32 )
shape = SubResource( 29 )

[node name="Sounds" type="Node" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )

[node name="Death" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Timers" type="Node" parent="."]

[node name="ChargeTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MoveTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="FiringTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FireRateTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="Effects" type="Node" parent="."]

[node name="Particles" type="Node" parent="Effects"]

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 70, 32 )
rotation = -0.174533

[node name="Muzzle" type="Particles2D" parent="."]
position = Vector2( 70, 32 )
emitting = false
amount = 30
lifetime = 0.25
explosiveness = 1.0
process_material = SubResource( 30 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="timeout" from="Timers/ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="Timers/FiringTimer" to="." method="_on_FiringTimer_timeout"]

[editable path="HitBox"]

[editable path="HurtBox"]
